--- a/index.html
+++ b/index.html
@@ -314,28 +314,65 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="container">
-            <h1>Alberto López Martínez</h1>
-            <p>User Research + UX Design</p>
-            <p style="font-size: 1.1rem; margin-top: 1rem;">Transforming mobile gaming experiences through data-driven insights and user-centered design</p>
-            <div class="contact-info">
-                alberto.lopez.mart22@gmail.com | LinkedIn: www.linkedin.com/in/alberto-lópez-m | Mexico City
-            </div>
+<!-- Hero Section -->
+<section class="hero">
+    <div class="container">
+        <h1 style="font-size: 4rem; font-weight: bold;">Alberto López Martínez</h1>
+        <p style="font-size: 1.5rem; font-weight: lighter; opacity: 0.85;">User Research + UX Design</p>
+        <p style="font-size: 1.1rem; margin-top: 1rem; opacity: 0.9;">Transforming mobile gaming experiences through data-driven insights and user-centered design</p>
+        <div class="contact-info" style="margin-top: 1.5rem; font-size: 1rem; opacity: 0.9;">
+            alberto.lopez.mart22@gmail.com | LinkedIn: www.linkedin.com/in/alberto-lópez-m | Mexico City
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- About Section -->
-    <section class="about" id="about">
-        <div class="container">
-            <div class="about-content">
-                <h2>About Me</h2>
-                <p>I'm a User Researcher specializing in mobile gaming, with expertise in transforming player insights into actionable UX improvements for Free Fire, LATAM's leading Battle Royale game. My approach combines rigorous research methodologies with cultural localization to create experiences that resonate with millions of players.</p>
-                <p>I excel at bridging research and design, leading cross-functional initiatives that have significantly improved CTR, conversions, and player sentiment through strategic visual communication and cohesive design systems.</p>
-            </div>
-        </div>
-    </section>
+<style>
+    /* Updated Hero Section Styling */
+    .hero {
+        background: linear-gradient(135deg, #1e1e1e 0%, #333333 100%); /* Darker background */
+        color: white;
+        padding: 8rem 0 4rem;
+        margin-top: 60px;
+        text-align: center;
+    }
+
+    .hero h1 {
+        font-size: 4rem;  /* Larger title for impact */
+        font-weight: bold;
+        color: #fff;
+        margin-bottom: 1rem;
+    }
+
+    .hero p {
+        font-size: 1.5rem;
+        font-weight: lighter;
+        opacity: 0.85;
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    .hero p + p {
+        font-size: 1.1rem;
+        margin-top: 1rem;
+        opacity: 0.9;
+    }
+
+    .contact-info {
+        margin-top: 1.5rem;
+        font-size: 1rem;
+        opacity: 0.9;
+    }
+
+    .contact-info a {
+        color: #3498db; /* Blue link for emphasis */
+        text-decoration: none;
+    }
+
+    .contact-info a:hover {
+        text-decoration: underline;
+    }
+</style>
+
 
     <!-- Research Process Section -->
     <section class="process-section" id="process">
